packages/toi/test/fixtures/invalid/root-array.toi
[
  {
    "$toi": "1.0.0",
    "$tier": "personal",
    "identity": { "author": "root is an array, not an object" }
  }
]
